--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.1.2",
     "file-loader": "^5.0.2",
+    "handpipe": "^0.11.2",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
