--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@loadable/component": "^5.10.3",
     "@loadable/server": "^5.10.3",
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
     "classnames": "^2.2.6",
     "cross-env": "^6.0.0",
     "css-element-queries": "^1.2.1",
