--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parcel",
-  "version": "1.0.43-dev.0",
+  "version": "1.0.44-dev.0",
   "main": "app/index.html",
   "private": true,
   "dependencies": {
@@ -127,6 +127,7 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
