--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel",
   "version": "1.0.51-dev.0",
-  "main": "app/index.html",
+  "main": "app/index.js",
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.22",
