--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pino": "^5.13.3",
+    "postcss-loader": "^3.0.0",
     "postcss-modules": "^1.4.1",
     "raw-loader": "^4.0.0",
     "react-hot-loader": "^4.12.13",
