--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^6.4.0",
+    "eslint-plugin-emotion": "^10.0.14",
     "eslint-plugin-jam3": "^0.2.2",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.1.2",
