--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "parcel",
-  "version": "1.0.51-dev.0",
+  "name": "universal-app",
+  "version": "1.0.53-dev.0",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "classnames": "^2.2.6",
+    "core-js": "^3.4.5",
     "cross-env": "^6.0.0",
     "css-element-queries": "^1.2.1",
     "express": "^4.17.1",
@@ -84,7 +85,6 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-polyfill": "^6.26.0",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
@@ -107,8 +107,6 @@
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pino": "^5.13.3",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^1.4.1",
