--- a/.babelrc
+++ b/.babelrc
@@ -20,7 +20,6 @@
       "sourceMap": true
     }],
     "@loadable/babel-plugin",
-    "react-hot-loader/babel",
     ["module-resolver", {
       "root": ["./"],
       "alias": {
@@ -38,6 +37,11 @@
     "lodash"
   ],
   "env": {
+    "development": {
+      "plugins": [
+        "react-hot-loader/babel"
+      ]
+    },
     "test": {
       "plugins": [
         [
