--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.93-dev.0",
+  "version": "1.0.93",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -39,6 +39,7 @@
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "sanitize-html": "^1.20.1",
+    "shrink-ray-current": "^4.1.2",
     "simple-deep-freeze": "^0.0.2",
     "stylis": "^3.5.4",
     "through": "^2.3.8",
