--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.99-dev.0",
+  "version": "1.0.101-dev.0",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -116,6 +116,7 @@
     "react-hot-loader": "^4.12.13",
     "require-from-string": "^2.0.2",
     "rimraf": "^3.0.0",
+    "robotstxt-webpack-plugin": "^7.0.0",
     "sass-loader": "^8.0.0",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.0.0",
