--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.172-dev.0",
+  "version": "1.0.174-dev.0",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -134,6 +134,7 @@
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
+    "webpack-stats-duplicates": "^2.1.0",
     "webpack-stats-plugin": "^0.3.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
@@ -158,7 +159,8 @@
     "coverage": "jest --collectCoverage",
     "prestart": "yarn install --production",
     "start": "yarn build:run",
-    "version": "echo \"versioning $npm_package_version\""
+    "version": "echo \"versioning $npm_package_version\"",
+    "stats": "webpack-stats-duplicates ./reports/client-stats.json && webpack-stats-duplicates ./reports/server-stats.json"
   },
   "engines": {
     "node": ">=10",
