Initial react-intl setup

--- a/.babelrc
+++ b/.babelrc
@@ -19,6 +19,13 @@
       "inline": true,
       "sourceMap": true
     }],
+    [
+      "react-intl",
+      {
+        "messagesDir": "./dist/messages/",
+        "extractSourceLocation": false
+      }
+    ],
     "@loadable/babel-plugin",
     ["module-resolver", {
       "root": ["./"],
