--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.3",
+    "react-intl": "^3.9.1",
     "react-on-screen": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-responsive-ui": "^0.14.178",
@@ -88,6 +89,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-react-intl": "^5.1.11",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
