Remove default messages from build - always load language pack

--- a/.babelrc
+++ b/.babelrc
@@ -23,7 +23,8 @@
       "react-intl",
       {
         "messagesDir": "./dist/messages/",
-        "extractSourceLocation": false
+        "extractSourceLocation": false,
+        "removeDefaultMessage": true
       }
     ],
     "@loadable/babel-plugin",
