--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "raw-loader": "^4.0.0",
     "react-hot-loader": "^4.12.13",
     "react-intl-translations-manager": "^5.0.3",
+    "react-intl-webpack-plugin": "^0.3.0",
     "require-from-string": "^2.0.2",
     "rimraf": "^3.0.0",
     "robotstxt-webpack-plugin": "^7.0.0",
