--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.211",
+  "version": "1.0.213-dev.0",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
