--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-react-intl": "^5.1.11",
+    "babel-plugin-react-intl-auto": "^3.1.0",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
