--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-plugin-react-intl": "^5.1.11",
     "babel-plugin-react-intl-auto": "^3.1.0",
     "brotli-webpack-plugin": "^1.1.0",
+    "command-line-args": "^5.1.1",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
@@ -112,6 +113,7 @@
     "ignore-loader": "^0.1.2",
     "jest": "^24.9.0",
     "jest-junit": "^10.0.0",
+    "json-stable-stringify": "^1.0.1",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
@@ -167,7 +169,8 @@
     "start": "yarn build:run",
     "version": "echo \"versioning $npm_package_version\"",
     "stats:dups": "webpack-stats-duplicates ./reports/client-stats.json && webpack-stats-duplicates ./reports/server-stats.json",
-    "manage:translations": "babel-node --presets @babel/env ./etc/i18n/translationRunner.js"
+    "translations:manage": "babel-node --presets @babel/env ./etc/i18n/translationRunner.js",
+    "translations:update": "babel-node --presets @babel/env ./etc/i18n/updateTranslation.js"
   },
   "engines": {
     "node": ">=10",
