--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "command-line-args": "^5.1.1",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
+    "console-table-printer": "^1.1.27",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -111,6 +112,7 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
+    "intl-messageformat-parser": "^3.5.1",
     "jest": "^24.9.0",
     "jest-junit": "^10.0.0",
     "json-stable-stringify": "^1.0.1",
