--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^10.0.23",
     "@loadable/component": "^5.10.3",
     "@loadable/server": "^5.10.3",
+    "@nivo/line": "^0.60.0",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "classnames": "^2.2.6",
