Generate translations reports

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "json-stable-stringify": "^1.0.1",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.13.0",
     "pino": "^5.13.3",
     "postcss-loader": "^3.0.0",
@@ -158,7 +159,7 @@
     "build": "rimraf reports && rimraf dist/i18n && yarn lint && yarn type-check && yarn coverage && yarn build:all",
     "build:run": "cross-env PORT=12345 node --icu-data-dir=node_modules/full-icu dist/server/server.js",
     "prebuild:prod": "yarn version --patch --no-git-tag-version --preid dev",
-    "build:prod": "yarn build && yarn package",
+    "build:prod": "yarn build && yarn translations:manage --gen && yarn package",
     "postbuild:prod": "yarn version --prerelease --no-git-tag-version --preid dev",
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
