--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.223-dev.0",
+  "version": "1.0.226-dev.0",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -94,6 +94,7 @@
     "babel-plugin-react-intl": "^5.1.11",
     "babel-plugin-react-intl-auto": "^3.1.0",
     "brotli-webpack-plugin": "^1.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "command-line-args": "^5.1.1",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
@@ -152,8 +153,8 @@
   "scripts": {
     "dev:client": "cross-env PUBLIC_PATH=https://localhost:1234/ cross-env NODE_ENV=development webpack-dev-server --config ./app/webpack/client.config.js --progress",
     "dev:server": "cross-env PUBLIC_PATH=https://localhost:1234/ cross-env PORT=12345 cross-env NODE_ENV=development babel-node --icu-data-dir=node_modules/full-icu --presets @babel/env app/webpack/index.js",
-    "build:client": "rimraf dist/client && cross-env BABEL_ENV=client cross-env PWA=false webpack --config ./app/webpack/client.config.js",
-    "build:server": "rimraf dist/server && cross-env BABEL_ENV=server webpack --config ./app/webpack/server.config.js",
+    "build:client": "cross-env BABEL_ENV=client cross-env PWA=false webpack --config ./app/webpack/client.config.js",
+    "build:server": "cross-env BABEL_ENV=server webpack --config ./app/webpack/server.config.js",
     "build:all": "concurrently \"yarn build:client\" \"yarn build:server\"",
     "package": "node etc/scripts/package.js",
     "build": "rimraf reports && rimraf dist/i18n && yarn lint && yarn type-check && yarn coverage && yarn build:all",
