--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.229-dev.0",
+  "version": "1.0.229",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -8,7 +8,6 @@
     "@emotion/styled": "^10.0.23",
     "@loadable/component": "^5.10.3",
     "@loadable/server": "^5.10.3",
-    "@nivo/line": "^0.60.0",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "classnames": "^2.2.6",
@@ -40,6 +39,7 @@
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.8",
     "react-toastify": "^5.4.0",
+    "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "sanitize-html": "^1.20.1",
     "shrink-ray-current": "^4.1.2",
@@ -77,6 +77,7 @@
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.5",
+    "@types/recharts": "^1.8.3",
     "@types/sanitize-html": "^1.20.2",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
