--- a/package.json
+++ b/package.json
@@ -145,10 +145,12 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
+    "webpack-inject-plugin": "^1.5.3",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
     "webpack-stats-duplicates": "^2.1.0",
     "webpack-stats-plugin": "^0.3.0",
+    "webpack-virtual-modules": "^0.2.1",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "scripts": {
