--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-app",
-  "version": "1.0.242-dev.0",
+  "version": "1.0.242",
   "main": "app/index.js",
   "private": true,
   "dependencies": {
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.8",
     "react-toastify": "^5.4.0",
+    "react-transition-group": "^4.3.0",
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "sanitize-html": "^1.20.1",
@@ -78,6 +79,7 @@
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.5",
+    "@types/react-transition-group": "^4.2.3",
     "@types/recharts": "^1.8.3",
     "@types/sanitize-html": "^1.20.2",
     "@types/styled-components": "^4.1.19",
