--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-focus-lock": "^2.2.1",
     "react-helmet-async": "^1.0.3",
     "react-intl": "^3.9.1",
     "react-on-screen": "^2.1.1",
