--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "sanitize-html": "^1.20.1",
+    "scroll-into-view-if-needed": "^2.2.22",
     "shrink-ray-current": "^4.1.2",
     "simple-deep-freeze": "^0.0.2",
     "spdy": "^4.0.1",
