--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-transition-group": "^4.3.0",
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "sanitize-html": "^1.20.1",
     "scroll-into-view-if-needed": "^2.2.22",
     "shrink-ray-current": "^4.1.2",
