--- a/package.json
+++ b/package.json
@@ -124,7 +124,9 @@
     "ignore-loader": "^0.1.2",
     "intl-messageformat-parser": "^3.5.1",
     "jest": "^24.9.0",
+    "jest-emotion": "^10.0.27",
     "jest-junit": "^10.0.0",
+    "jsdom": "^16.1.0",
     "json-stable-stringify": "^1.0.1",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.8.0",
