--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^1.4.1",
+    "prop-types": "^15.7.2",
     "raw-loader": "^4.0.0",
     "react-hot-loader": "^4.12.13",
     "react-intl-webpack-plugin": "^0.3.0",
