--- a/package.json
+++ b/package.json
@@ -175,8 +175,8 @@
     "build:prod": "yarn build && yarn translations:manage --gen && yarn package",
     "postbuild:prod": "yarn version --prerelease --no-git-tag-version --preid dev",
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
-    "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
-    "lint:jsonly": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js",
+    "lint:js": "eslint ./ --fix --ext .jsx,.js,.ts,.tsx",
+    "lint:jsonly": "eslint ./ --fix --ext .jsx,.js",
     "lint": "yarn lint:css && yarn lint:js",
     "type-check": "tsc --noEmit --skipLibCheck",
     "test": "jest",
