--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.22",
+    "@emotion/css": "^10.0.27",
     "@emotion/styled": "^10.0.23",
     "@loadable/component": "^5.10.3",
     "@loadable/server": "^5.10.3",
+    "@matt-dunn/react-wireframes": "^1.0.21",
     "abort-controller": "^3.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
