--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "classnames": "^2.2.6",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.4.5",
     "cross-env": "^6.0.0",
     "css-element-queries": "^1.2.1",
@@ -26,6 +27,7 @@
     "he": "^1.2.0",
     "helmet": "^3.21.2",
     "is-promise": "^2.1.0",
+    "jsonwebtoken": "^8.5.1",
     "llog": "^0.2.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
