--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@loadable/server": "^5.10.3",
     "@matt-dunn/react-wireframes": "^2.0.0",
     "abort-controller": "^3.0.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.4.5",
+    "cors": "^2.8.5",
     "cross-env": "^6.0.0",
     "css-element-queries": "^1.2.1",
     "express": "^4.17.1",
