--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app/index.js",
   "private": true,
   "dependencies": {
+    "@casl/ability": "^4.1.5",
     "@emotion/core": "^10.0.22",
     "@emotion/css": "^10.0.27",
     "@emotion/styled": "^10.0.23",
@@ -36,6 +37,7 @@
     "object-path-immutable": "^4.1.0",
     "pino": "^5.13.3",
     "polished": "^3.4.2",
+    "pouchdb": "^7.2.1",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -78,13 +80,18 @@
     "@loadable/babel-plugin": "^5.10.3",
     "@loadable/webpack-plugin": "^5.7.1",
     "@types/classnames": "^2.2.9",
+    "@types/cookie-parser": "^1.4.2",
     "@types/enzyme": "^3.10.3",
+    "@types/express": "^4.17.6",
+    "@types/express-serve-static-core": "^4.17.8",
     "@types/he": "^1.1.0",
     "@types/is-promise": "^2.1.0",
     "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.138",
     "@types/marked": "^0.7.1",
+    "@types/pouchdb": "^6.4.0",
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
