--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "@types/classnames": "^2.2.9",
     "@types/cookie-parser": "^1.4.2",
     "@types/enzyme": "^3.10.3",
-    "@types/express": "^4.17.6",
     "@types/express-serve-static-core": "^4.17.8",
     "@types/he": "^1.1.0",
     "@types/is-promise": "^2.1.0",
@@ -92,6 +91,7 @@
     "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.138",
     "@types/marked": "^0.7.1",
+    "@types/node": "^14.0.14",
     "@types/pouchdb": "^6.4.0",
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.9.2",
