--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "handpipe": "^0.11.2",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^1.0.4",
     "ignore-loader": "^0.1.2",
     "intl-messageformat-parser": "^3.5.1",
     "jest": "^24.9.0",
