--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "stylelint-processor-styled-components": "^1.8.0",
     "superstruct": "^0.8.3",
     "typescript": "^3.6.3",
+    "utility-types": "^3.10.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
