--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "through": "^2.3.8",
     "typesafe-actions": "^5.1.0",
     "uuid": "^3.3.3",
+    "webfontloader": "^1.6.28",
     "workbox-window": "^4.3.1",
     "yup": "^0.27.0"
   },
@@ -104,6 +105,7 @@
     "@types/sanitize-html": "^1.20.2",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
+    "@types/webfontloader": "^1.6.32",
     "@types/webpack": "^4.41.0",
     "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
