--- a/package.json
+++ b/package.json
@@ -83,9 +83,11 @@
     "@loadable/webpack-plugin": "^5.7.1",
     "@types/classnames": "^2.2.9",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/enzyme": "^3.10.3",
     "@types/express-serve-static-core": "^4.17.8",
     "@types/he": "^1.1.0",
+    "@types/helmet": "^0.0.47",
     "@types/is-promise": "^2.1.0",
     "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.5.0",
